--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -19,3 +19,25 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.app {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.app-header {
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.app-main {
+  flex: auto;
+}
+
+.app-footer {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
