完成project的主体框架

--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --bg-gray-50: rgb(27, 29, 30);
 }
 
 @media (prefers-color-scheme: dark) {
