--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -45,3 +45,11 @@ body {
   justify-content: space-around;
   padding: 1rem;
 }
+
+.app-back {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 1rem;
+  padding: 1rem 1rem 0;
+}
